--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "vercel": "^29.1.1",
     "vite": "4.4.0",
     "vite-tsconfig-paths": "4.2.0"
+  },
+  "dependencies": {
+    "openai": "^3.3.0"
   }
 }
